# study-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  db.py  main.py  mcp_http.py  mcp_tools.py  ratelimit.py  schemas.py
app/intents/: __init__.py  courses.py  dashboard.py  deliverables.py  events.py  exams.py  files.py  lectures.py  settings.py  slots.py  study_topics.py  tasks.py
app/routers/: auth.py  courses.py  dashboard.py  deliverables.py  events.py  exams.py  files.py  (+7 more)
docs/: RLS.md
migrations/: 00000000000000_baseline.sql  20260516000001_auth_attempts.sql  20260516000002_events_drop_course_code_fk.sql  20260516020001_users_table.sql  20260516020002_user_id_on_owned_tables.sql  20260516020003_composite_keys.sql  20260516020004_app_settings_per_user.sql  20260516020005_totp_on_users.sql  20260516020006_file_index_path_prefix.sql  20260516020007_events_trigger_user_id.sql  20260516020008_events_drop_user_id_fk.sql  20260516030001_drop_user_id_defaults.sql  20260516040001_signup_tables.sql  20260516050001_rls_policies.sql  20260516060001_invalidate_pre_phase5_tokens.sql  20260516070001_user_secrets_table.sql
scripts/: index_files.py  migrate_study_root.sh  run_migrations.py  seed_operator_password.py
tests/: test_auth_user_dep.py  test_cascade.py  test_integration_full_flow.py  test_integration_routes.py  test_integration_signup.py  test_oauth_consent_csrf.py  test_phase1_schema.py  test_phase2_isolation.py  test_phase4_guc.py  test_phase4_rls.py
web/: .npmrc  Caddyfile  index.html
(+86 files in other folders)
